# api/routes/routes.js
@@ -1,6 +1,7 @@
 'use strict';
 module.exports = function(app) {
   var players = require('../controllers/playersController');
+  var users = require('../controllers/usersController');
 
   // contactList Routes
   app.route('/players')
@@ -10,4 +11,7 @@ module.exports = function(app) {
   app.route('/players/:id')
     .put(players.update_a_player)
     .delete(players.delete_a_player);
+
+  app.route('/login')
+    .post(users.auth);
 };
